# dify-knowledge-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
dify_knowledge_pipeline/: __init__.py  client.py  fire_drop.py  models.py  pipeline.py  pipline.py
dify_knowledge_pipline/: __init__.py  client.py  errors.py  fire_drop.py  models.py  pipline.py
example/: check_knowledge.py  list_encoding_models.py
